Fixed many litte quirks: autocomplete, collapse, new/edit

--- a/app/assets/stylesheets/marc_editor.scss
+++ b/app/assets/stylesheets/marc_editor.scss
@@ -175,3 +175,9 @@ button.abutton-icon-solo .ui-icon {left: 0;}
 .abuttonset .abutton { float: left; }
 .abuttonset-single .abutton,
 .abuttonset-multi .abutton { margin-right: -1px; }
+
+[data-autocomplete] {
+	background-image:url('/images/textfield_key.png');
+	background-repeat: no-repeat;
+	background-position: center right;
+}
